<resources>
    <string name="app_name">Task</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>
    <string name="hint_edit_email">Digite seu e-mail</string>
    <string name="hint_edit_password">Digite sua senha</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_warning">Atenção</string>
    <string name="text_button_warning">Entendi</string>
    <string name="password_empty">Preencha a senha!</string>
    <string name="password_text">Senha!</string>
    <string name="email_empty">Preencha seu email!</string>
    <string name="emali_text">E-mail!</string>

    <string name="text_title_login_fragment">Login</string>
    <string name="text_button_register_login_fragment">Criar conta</string>
    <string name="text_button_recover_login_fragment">Recuperar conta</string>

    <string name="email_empty_register_fragment">Preencha um email válido!</string>
    <string name="password_empty_register_fragment">Preencha uma senha.</string>
    <string name="text_button_register_fragment">Enviar</string>
    <string name="text_title_toolbar_register_fragment">Criar conta</string>

    <string name="text_info_recover_account_fragment">Informe seu email de cadastro para receber \n um link para alteração de senha.</string>
    <string name="text_title_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_button_recover_account_fragment">Enviar</string>

    <string name="description_empty_form_task_fragment">Adicione uma descrição!</string>
</resources>