<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.auth.RecoverAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout1">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            android:paddingTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title_toolbar_recover_account_fragment"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:paddingTop="20dp"/>

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewMensagem"
                android:text="@string/text_info_recover_account_fragment"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="24dp"/>

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emali_text"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/campoEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/hint_edit_email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="4dp"
                style="@style/EditTextTheme"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEnviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_button_recover_account_fragment"
                style="@style/ButtonTheme"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                android:layout_gravity="center" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>